--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": " ",
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.0",
     "sass": "^1.32.13",
     "sass-loader": "^11.1.1"
   }
