--- a/package.json
+++ b/package.json
@@ -49,5 +49,16 @@
     "gh-pages": "^3.2.0",
     "sass": "^1.32.13",
     "sass-loader": "^11.1.1"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kalinkinajane/React-Redux.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kalinkinajane/React-Redux/issues"
   }
 }
