--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kalinkinajane.github.io/TodoList",
+  "homepage": "/",
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
