--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "/",
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
@@ -24,8 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,8 +45,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.0",
-    "sass": "^1.32.13",
-    "sass-loader": "^11.1.1"
+    "sass": "^1.32.13"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
